<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        app:layout_scrollFlags = "scroll|enterAlways"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary" />


           <ScrollView
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical">

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">

                       <EditText
                           android:layout_weight="1"
                           android:layout_width="0dp"
                           android:layout_marginLeft="20dp"
                           android:layout_marginRight="10dp"
                           android:layout_marginBottom="20dp"
                           android:layout_marginTop="20dp"
                           android:layout_height="wrap_content"
                           android:hint="@string/sendString"
                           android:layout_gravity="center"
                           android:gravity="center"
                           android:id="@+id/String"/>

                       <LinearLayout
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:orientation="vertical">

                           <Button
                               android:layout_marginTop="10dp"
                               android:layout_gravity="center"
                               android:gravity="center"
                               android:layout_width="90dp"
                               android:layout_height="50dp"
                               android:id="@+id/pasteString"
                               android:layout_marginRight="10dp"
                               android:text="@string/paste"/>

                           <Button
                               android:layout_gravity="center"
                               android:gravity="center"
                               android:layout_width="90dp"
                               android:layout_height="50dp"
                               android:id="@+id/deleteString"
                               android:layout_marginRight="10dp"
                               android:text="@string/delete"/>


                       </LinearLayout>




                   </LinearLayout>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">

                       <EditText
                           android:layout_weight="1"
                           android:layout_width="0dp"

                           android:layout_marginLeft="20dp"
                           android:layout_marginRight="10dp"
                           android:layout_marginBottom="20dp"
                           android:layout_marginTop="20dp"
                           android:layout_height="wrap_content"
                           android:hint="@string/sendKey"
                           android:layout_gravity="center"
                           android:gravity="center"
                           android:inputType="textPassword"
                           android:id="@+id/secretIdPassowrd"/>

                       <LinearLayout
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:orientation="vertical">

                           <Button
                               android:id="@+id/pasteKey"
                               android:layout_width="90dp"
                               android:layout_marginTop="10dp"
                               android:layout_height="50dp"
                               android:layout_gravity="center"
                               android:layout_marginRight="10dp"
                               android:gravity="center"
                               android:text="@string/paste" />

                           <Button
                               android:layout_gravity="center"
                               android:gravity="center"
                               android:layout_width="90dp"
                               android:layout_height="50dp"
                               android:id="@+id/deleteKey"
                               android:layout_marginRight="10dp"
                               android:text="@string/delete"/>


                       </LinearLayout>




                   </LinearLayout>





                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:layout_gravity="center"
                       android:gravity="center">

                       <Button
                           android:layout_width="0dp"
                           android:layout_height="50dp"
                           android:layout_weight="1"
                           android:text="@string/Encrypt"
                           android:layout_marginRight="5dp"
                           android:layout_marginLeft="10dp"
                           android:layout_marginTop="5dp"
                           android:layout_marginBottom="5dp"
                           android:id="@+id/encryptButton"/>

                       <Button
                           android:layout_width="0dp"
                           android:layout_height="50dp"
                           android:layout_weight="1"
                           android:text="@string/Decrypt"
                           android:layout_marginRight="10dp"
                           android:layout_marginLeft="5dp"
                           android:layout_marginTop="5dp"
                           android:layout_marginBottom="5dp"
                           android:id="@+id/decryptButton"/>

                   </LinearLayout>

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_marginTop="20dp"
                       android:layout_marginLeft="20dp"
                       android:layout_marginRight="20dp"
                       android:layout_height="wrap_content"
                       android:text="@string/finallyString"
                       android:layout_gravity="center"
                       android:textSize="16sp"
                       android:textStyle="bold"
                       android:id="@+id/encryptInfo"
                       android:gravity="center" />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_marginBottom="20dp"
                       android:layout_marginLeft="20dp"
                       android:layout_marginRight="20dp"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:gravity="center"
                       android:id="@+id/finallyString"/>

                   <Button
                       android:id="@+id/copyString"
                       android:layout_width="250dp"
                       android:layout_height="50dp"
                       android:layout_gravity="center"
                       android:gravity="center"
                       android:text="@string/copy" />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_marginTop="20dp"
                       android:layout_marginLeft="20dp"
                       android:layout_marginRight="20dp"
                       android:layout_height="wrap_content"
                       android:text="@string/keyStringInfo"
                       android:textSize="16sp"
                       android:textStyle="bold"
                       android:layout_gravity="center"
                       android:gravity="center" />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_marginBottom="20dp"
                       android:layout_marginLeft="20dp"
                       android:layout_marginRight="20dp"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:gravity="center"
                       android:inputType="textPassword"
                       android:id="@+id/secretId"/>

                   <Button
                       android:layout_width="250dp"
                       android:layout_height="50dp"
                       android:text="@string/copy"
                       android:layout_gravity="center"
                       android:gravity="center"
                       android:id="@+id/copyKey"/>

               </LinearLayout>


           </ScrollView>

</LinearLayout>